third_party/move/move-compiler-v2/tests/more-v1/parser/invalid_call_lhs_return.exp

Diagnostics:
error: Calls to function values other than inline function parameters not yet supported
  ┌─ tests/more-v1/parser/invalid_call_lhs_return.move:3:9
  │
3 │         (return ())(0, 1);
  │         ^^^^^^^^^^^^^^^^^
